--- a/index.html
+++ b/index.html
@@ -10,55 +10,56 @@
 </head>
 <body>
 <header>
-  <div class="mountain">
     <h1>LA MONTAGNE <br>CA VOUS GAGNE</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Quis molestias odio qui obcaecati odit facere  T</p>
   
-  <div class="arrow">
-    <img src="./Styles/assets/Icons/arrow.svg"  alt="">
-  </div>
-</div>
-</header>
-  <nav>
-    <ul class="left-nav">
-      <li><a href="#"></a>THIS IS MASSIVELY</li>
-      <li><a href="#"></a> GENERIC PAGE</li>
-      <li><a href="#"></a>ELEMENTS REFERENCE</li>
-    </ul>
-    <ul class="right-nav">
-      <li><img src="./Styles/assets/Icons/twitter.svg" alt="Logo twt"></li>
-      <li><img src="./Styles/assets/Icons/Facebook.svg" alt="logo FB"></li>
-      <li><img src="./Styles/assets/Icons/Instagram.svg" alt="Logo instagram"></li>
-      <li><img src="./Styles/assets/Icons/Github icon.svg" alt="Logo Github"></li>
-    </ul>
-  </nav>
+
+    <span><img src="./Styles/assets/Icons/arrow.svg"  alt="">
+    </span>
+  </header>
+  <main>
+<nav>
+  <ul class="nav-left">
+    <li><a href="#">THIS IS MASSIVELY</a></li>
+    <li><a href="#">GENERIC PAGE</a> </li>
+    <li><a href="#">ELEMENTS REFERENCE</a></li>
+  </ul>
+  <ul class="nav-right">
+    <li><img src="./Styles/assets/Icons/twitter.svg" alt="Logo twt"></li>
+    <li><img src="./Styles/assets/Icons/Facebook.svg" alt="logo FB"></li>
+    <li><img src="./Styles/assets/Icons/Instagram.svg" alt="Logo instagram"></li>
+    <li><img src="./Styles/assets/Icons/Github icon.svg" alt="Logo Github"></li>
+  </ul>
+</nav>
+
+
 <section class="section-1">
 
-<h6>April 25, 2017</h6>
-
-<h2>AND THIS IS A MASSIVE HEADLINE</h2>
-
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consequuntur debitis recusandae! Asperiores facere laboriosam omnis vel provident debitis est!</p>
-<div class="img-jump">
+  <div class="top-section-1">
+<span>April 25, 2017</span>
+<h2>AND THIS IS A<br>MASSIVE HEADLINE</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Repudiandae consequuntur debitis recusandae! Asperiores facere laboriosam omnis<br> vel provident debitis est!</p>
   <img src="./Styles/assets/images/pic01.jpg"  alt="Photo jump">
-</div>
+
 <button class="btn-1"> FULL STORY</button>
-</section>
+</div>
 
-<Section class="section-2">
+<div class="bot-section-1 ">
 
-<div class="section-2-left">
-<h6>April 24, 2017</h6>
-<h3>SED MAGNA IPSUM FAUCIBUS</h3>
+<div class="bl-section-1">
+<span>April 24, 2017</span>
+<h3>SED MAGNA <br>IPSUM FAUCIBUS</h3>
 <div class="img-section-2-left">
   <img src="./Styles/assets/images/pic02.jpg" alt="Photo plaine">
 </div>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis molestias odio qui obcaecati odit facere laboriosam ullam doloremque neque deserunt.</p>
-</div>
 <button class="btn-1"> FULL STORY</button>
-<div class="section-2-right">
-<h6>April 22, 2017</h6>
-<h3>PRIMIS EGET IMPERDIET LOREM</h3>
+</div>
+
+
+<div class="br-section-1">
+<span>April 22, 2017</span>
+<h3>PRIMIS EGET <br>IMPERDIET LOREM</h3>
 <div class="img-section-2-right">
   <img src="./Styles/assets/images/pic03.jpg" alt="Sunset">
 </div>
@@ -66,7 +67,10 @@
 
 <button class="btn-1">FULL STORY</button>
 </div>
+</div>
 </Section>
+</main>
+
 <footer>
   <div class="left-footer">
   <form action="" class="grid">
@@ -85,7 +89,7 @@
   <h6>ADDRESS</h6>
   <p>1234, Somewhere Road 87257 Nashville, TN 000000-000</p>
 </div>
-</div>
+
 <div class="phone">
   <h6>Phone</h6>
   <p> (000)000 000</p>
@@ -101,6 +105,7 @@
     <li><img src="./Styles/assets/Icons/Instagram.svg" alt="Logo instagram"></li>
     <li><img src="./Styles/assets/Icons/Github icon.svg" alt="Logo Github"></li>
   </ul>
+</div>
 </div>
 </footer>
 
