--- a/Styles/index.html
+++ b/Styles/index.html
@@ -32,13 +32,13 @@
   </ul>
 </nav>
 
-
 <section class="section-1">
 
   <div class="top-section-1">
 <span>April 25, 2017</span>
 <h2>AND THIS IS A<br>MASSIVE HEADLINE</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Repudiandae consequuntur debitis recusandae! Asperiores facere laboriosam omnis<br> vel provident debitis est!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Repudiandae consequuntur debitis recusandae! Asperiores facere <br>laboriosam omnis vel provident debitis est!</p>
+
   <img src="./Styles/assets/images/pic01.jpg"  alt="Photo jump">
 
 <button class="btn-1"> FULL STORY</button>
@@ -72,33 +72,34 @@
 </main>
 
 <footer>
-  <div class="left-footer">
-  <form action="" class="grid">
-    <span>Name</span>
-    <span>Email</span>
-    <input type="Nom">
-    <input type="text">
-    <span>Message</span>
-    <textarea cols="30" rows="10"></textarea>
-    <input type="button" value="Send Message" class="btn">
 
+  <form action="">
+    <label for="Name">Name</label>
+    <input type="text" id="Name">
+    <label for="Email">Email</label>
+    <input type="text" id="Email">
+    <label for="Message">Message</label>
+    <textarea name="" id="Message" cols="30" rows="10"></textarea>
+    <div class="submit-container">
+      <input type="submit" value="send message">
+    </div>
   </form>
-</div>
-<div class="right-footer">
-<div class="address">
-  <h6>ADDRESS</h6>
-  <p>1234, Somewhere Road 87257 Nashville, TN 000000-000</p>
-</div>
 
-<div class="phone">
-  <h6>Phone</h6>
-  <p> (000)000 000</p>
-</div>
-<div class="email">
-  <h6>EMAIL</h6>
-  <p>info@untitled.tld</p>
-</div>
-<div class="Social">
+  <div class="infos-contact">
+    <div>
+      <h3>address</h3>
+      <p><br>1234 Somewhere Road #87257<br>Nashville, TN 00000-0000</p>
+    </div>
+    <div>
+      <h3>phone</h3>
+      <p>(000) 000-0000</p>
+    </div>
+    <div>
+      <h3>email</h3>
+      <p>info@untitled.ltd</p>
+    </div>
+    <div class="social">
+      <h3>social</h3>
   <ul>
     <li><img src="./Styles/assets/Icons/twitter.svg" alt="Logo twt"></li>
     <li><img src="./Styles/assets/Icons/Facebook.svg" alt="logo FB"></li>
