--- a/Styles/index.html
+++ b/Styles/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./Styles/style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <title>La Montagne</title>
 </head>
@@ -14,7 +14,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Quis molestias odio qui obcaecati odit facere  T</p>
   
 
-    <span><img src="./Styles/assets/Icons/arrow.svg"  alt="">
+    <span><img src="./assets/Icons/arrow.svg"  alt="">
     </span>
   </header>
   <main>
@@ -25,10 +25,10 @@
     <li><a href="#">ELEMENTS REFERENCE</a></li>
   </ul>
   <ul class="nav-right">
-    <li><img src="./Styles/assets/Icons/twitter.svg" alt="Logo twt"></li>
-    <li><img src="./Styles/assets/Icons/Facebook.svg" alt="logo FB"></li>
-    <li><img src="./Styles/assets/Icons/Instagram.svg" alt="Logo instagram"></li>
-    <li><img src="./Styles/assets/Icons/Github icon.svg" alt="Logo Github"></li>
+    <li><img src="./assets/Icons/twitter.svg" alt="Logo twt"></li>
+    <li><img src="./assets/Icons/Facebook.svg" alt="logo FB"></li>
+    <li><img src="./assets/Icons/Instagram.svg" alt="Logo instagram"></li>
+    <li><img src="./assets/Icons/Github icon.svg" alt="Logo Github"></li>
   </ul>
 </nav>
 
@@ -39,7 +39,7 @@
 <h2>AND THIS IS A<br>MASSIVE HEADLINE</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Repudiandae consequuntur debitis recusandae! Asperiores facere <br>laboriosam omnis vel provident debitis est!</p>
 
-  <img src="./Styles/assets/images/pic01.jpg"  alt="Photo jump">
+  <img src="./assets/images/pic01.jpg"  alt="Photo jump">
 
 <button class="btn-1"> FULL STORY</button>
 </div>
@@ -50,7 +50,7 @@
 <span>April 24, 2017</span>
 <h3>SED MAGNA <br>IPSUM FAUCIBUS</h3>
 <div class="img-section-2-left">
-  <img src="./Styles/assets/images/pic02.jpg" alt="Photo plaine">
+  <img src="./assets/images/pic02.jpg" alt="Photo plaine">
 </div>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis molestias odio qui obcaecati odit facere laboriosam ullam doloremque neque deserunt.</p>
 <button class="btn-1"> FULL STORY</button>
@@ -61,7 +61,7 @@
 <span>April 22, 2017</span>
 <h3>PRIMIS EGET <br>IMPERDIET LOREM</h3>
 <div class="img-section-2-right">
-  <img src="./Styles/assets/images/pic03.jpg" alt="Sunset">
+  <img src="./assets/images/pic03.jpg" alt="Sunset">
 </div>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque nesciunt totam a aperiam vero error modi asperiores obcaecati. Facere, voluptas!</p>
 
@@ -101,10 +101,10 @@
     <div class="social">
       <h3>social</h3>
   <ul>
-    <li><img src="./Styles/assets/Icons/twitter.svg" alt="Logo twt"></li>
-    <li><img src="./Styles/assets/Icons/Facebook.svg" alt="logo FB"></li>
-    <li><img src="./Styles/assets/Icons/Instagram.svg" alt="Logo instagram"></li>
-    <li><img src="./Styles/assets/Icons/Github icon.svg" alt="Logo Github"></li>
+    <li><img src="./assets/Icons/twitter.svg" alt="Logo twt"></li>
+    <li><img src="./assets/Icons/Facebook.svg" alt="logo FB"></li>
+    <li><img src="./assets/Icons/Instagram.svg" alt="Logo instagram"></li>
+    <li><img src="./assets/Icons/Github icon.svg" alt="Logo Github"></li>
   </ul>
 </div>
 </div>
