--- a/Styles/index.html
+++ b/Styles/index.html
@@ -38,8 +38,8 @@
 <span>April 25, 2017</span>
 <h2>AND THIS IS A<br>MASSIVE HEADLINE</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Repudiandae consequuntur debitis recusandae! Asperiores facere <br>laboriosam omnis vel provident debitis est!</p>
-
-  <img src="./assets/images/pic01.jpg"  alt="Photo jump">
+<div class="img-container">
+  <img src="./assets/images/pic01.jpg"  alt="Photo jump"></div>
 
 <button class="btn-1"> FULL STORY</button>
 </div>
@@ -101,10 +101,10 @@
     <div class="social">
       <h3>social</h3>
   <ul>
-    <li><img src="./assets/Icons/twitter.svg" alt="Logo twt"></li>
-    <li><img src="./assets/Icons/Facebook.svg" alt="logo FB"></li>
-    <li><img src="./assets/Icons/Instagram.svg" alt="Logo instagram"></li>
-    <li><img src="./assets/Icons/Github icon.svg" alt="Logo Github"></li>
+    <li><img src="./assets/black-icons/twt.svg" alt="Logo twt"></li>
+    <li><img src="./assets/black-icons/fb.svg" alt="logo FB"></li>
+    <li><img src="./assets/black-icons/insta.svg" alt="Logo instagram"></li>
+    <li><img src="./assets/black-icons/github.svg" alt="Logo Github"></li>
   </ul>
 </div>
 </div>
