--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="img-section-2-left">
   <img src="./assets/images/pic02.jpg" alt="Photo plaine">
 </div>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis molestias odio qui obcaecati odit facere laboriosam ullam doloremque neque deserunt.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis molestias odio qui obcaecati odit facere laboriosam ullam doloremque neque .</p>
 <button class="btn-1"> FULL STORY</button>
 </div>
 
