--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="img-section-2-right">
   <img src="./assets/images/pic03.jpg" alt="Sunset">
 </div>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque nesciunt totam a aperiam vero error modi asperiores obcaecati. Facere, voluptas!</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque nesciunt totam a aperiam vero error modi asperiores obcaecati. Facere, </p>
 
 <button class="btn-1">FULL STORY</button>
 </div>
